--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "4.1.2",
     "@ionic-native/core": "3.10.2",
     "@ionic-native/geolocation": "^3.10.3",
+    "@ionic-native/globalization": "^3.12.1",
+    "@ionic-native/in-app-browser": "^3.12.1",
     "@ionic-native/splash-screen": "3.10.2",
     "@ionic-native/status-bar": "3.10.2",
     "@ionic/storage": "^2.0.1",
+    "@ngx-translate/core": "^7.0.0",
+    "@ngx-translate/http-loader": "0.0.3",
     "ionic-angular": "3.3.0",
     "ionicons": "3.0.0",
     "ng2-cordova-oauth": "0.0.8",
